<resources>
    <string name="app_name">Tasty</string>
    <string name="logo_description">tasty app logo</string>
    <string name="restaurant_label">Restaurant</string>
    <string name="customer_label">Bestellender</string>
    <string name="title_activity_restaurant_login">Restaurant Login</string>
    <string name="title_activity_restaurant_registration">Registrierung</string>
    <string name="title_activity_customer_start">Kunde</string>
    <string name="title_activity_customer_swipe">Bestellen</string>
    <string name="title_activity_customer_recommendation">Empfehlung</string>
    <string name="title_activity_customer_restaurantOverview">Restaurant Übersicht</string>
    <string name="prompt_username">Restaurant-Name</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="welcome">"Willkommen! "</string>
    <string name="invalid_username">Kein valider Benutzername</string>
    <string name="invalid_password">Passwort muss min. 5 Zeichen haben</string>
    <string name="login_failed">"Anmeldung fehlgeschlagen"</string>
    <string name="register_label">Registrieren</string>
    <string name="recommendation_label">Essensempfehlung</string>
    <string name="at_home_label">Zuhause</string>
    <string name="reservation_delivery_label">Reservierung/Lieferung</string>
    <string name="new_recommendation_label">Neue Empfehlung</string>
    <string name="new_input_label">Neue Eingabe</string>
    <string name="customer_order_confirmation_text">Ihr Auftrag wurde an die Gaststätte übermittelt.\nDie Gaststätte hat
        den Eingang\nIhres Auftrags bestätigt.\n\nSie erhalten eine Bestätigung per Mail.
    </string>
    <string name="customer_order_confirmation_title">Auftragsbestätigung</string>
    <string name="ok_label">OK</string>
    <string name="suggestion_title">TASTY Empfehlung</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Tonys Tacos</string>
    <string name="restaurant_address_streetNumber">Straße 1</string>
    <string name="restaurant_address_zipCodeCity">12345 Stadt</string>
    <string name="restaurant_address_country">Deutschland</string>
    <string name="restaurant_distance_label">Entfernung</string>
    <string name="restaurant_distance_value">1,3 km</string>
    <string name="restaurant_walking_distance">20 min</string>
    <string name="restaurant_biking_distance">10 min</string>
    <string name="restaurant_driving_distance">6 min</string>
    <string name="restaurant_opening_hours_label">Öffnungszeiten</string>
    <string name="weekday_mondayToFriday">Montag - Freitag</string>
    <string name="weekday_saturday">Samstag</string>
    <string name="weekday_sunday">Sonntag</string>
    <string name="opening_hours">07:00 \ 17:00</string>
    <string name="delivery_label">Lieferung</string>
    <string name="reservation_label">Reservierung</string>
    <string name="average_rating">3,5</string>
    <string name="no_rating">0</string>
    <string name="sort_by_label">Sotieren nach</string>
    <string name="ratings_sort_by_newest_label">Neueste</string>
    <string name="ratings_sort_by_highest_label">Höchste</string>
    <string name="ratings_sort_by_lowest_label">Niedrigste</string>
    <string name="rating_title_1">Bester Taco in Karlsruhe!</string>
    <string name="rating_content_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="rating_title_2">inakzeptable lieferdauer :(</string>
    <string name="rating_title_3">unfreundliche Bedienung</string>
    <string name="startseite">Startseite</string>
    <string name="name_des_restaurants">Name des Restaurants</string>
    <string name="stra_e">Straße</string>
    <string name="hausnummer">Hausnummer</string>
    <string name="ort">Ort</string>
    <string name="plz">PLZ</string>
    <string name="daten_zum_restaurant">Daten zum Restaurant</string>
    <string name="lieferservice_vorhanden">Lieferservice vorhanden</string>
    <string name="reservierung_m_glich">Reservierung möglich</string>
    <string name="reservierung_notwendig">Reservierung notwendig</string>
    <string name="vegetarisch">Vegetarisch</string>
    <string name="vegan">Vegan</string>
    <string name="Indisch">Indisch</string>
    <string name="asiatisch">Asiatisch</string>
    <string name="europ_isch">Indonesisch</string>
    <string name="italienisch">Italienisch</string>
    <string name="in_app_bezahlung_m_glich">In-App Bezahlung möglich</string>
    <string name="Deutsch">Deutsch</string>
    <string name="mexikanisch">Mexikanisch</string>
    <string name="speichern_und_weiter">Speichern und weiter</string>
    <string name="daten_zum_inhaber">Daten zum Inhaber</string>
    <string name="anmeldedaten">Anmeldedaten</string>
    <string name="passwort">Passwort</string>
    <string name="nachname">Nachname</string>
    <string name="vorname">Vorname</string>
    <string name="telefonnummer">Telefonnummer</string>
    <string name="e_mail">E-Mail</string>
    <string name="registrieren">Registrieren</string>
    <string name="passwort_wiederholen">Passwort wiederholen</string>

    <string name="menu_item_1">Meine Daten</string>
    <string name="menu_item_2">Meine Präferenzen</string>
    <string name="menu_item_3">Meine Zahlungswege</string>
    <string name="sample_name">Max Mustermann</string>


    <string name="praeferenzen_preisrahmen">Preisramen</string>
    <string name="praeferenzen_kategorie">Kategorie</string>
    <string name="praeferenzen_kategorie_alles">alles</string>
    <string name="praeferenzen_kategorie_mexikanisch">mexikanisch</string>
    <string name="praeferenzen_kategorie_indisch">indisch</string>
    <string name="praeferenzen_kategorie_italienisch">italienisch</string>
    <string name="praeferenzen_kategorie_deutsch">deutsch</string>
    <string name="praeferenzen_kategorie_amerikanisch">amerikanisch</string>
    <string name="praeferenzen_kategorie_chinesisch">chinesisch</string>
    <string name="praeferenzen_ernaehrungsweise">Ernährungsweise</string>
    <string name="praeferenzen_ernaehrungsweise_alles">alles</string>
    <string name="praeferenzen_ernaehrungsweise_vegetarisch">vegetarisch</string>
    <string name="praeferenzen_ernaehrungsweise_vegan">vegan</string>
    <string name="praeferenzen_ernaehrungsweise_glutenfrei">glutenfrei</string>
    <string name="praeferenzen_ernaehrungsweise_laktosefrei">laktosefrei</string>
    <string name="praeferenzen_ernaehrungsweise_frutarisch">frutarisch</string>
    <string-array name="präferenzen_kategorie_array">
        <item>mexikanisch</item>
        <item>indisch</item>
        <item>indonesisch</item>
        <item>italienisch</item>
        <item>deutsch</item>
        <item>amerikanisch</item>
        <item>chinesisch</item>
    </string-array>
    <string-array name="präferenzen_ernaehrungsweise_array">
        <item>vegetarisch</item>
        <item>vegan</item>
        <item>glutenfrei</item>
        <item>laktosefrei</item>
        <item>frutarisch</item>
    </string-array>
    <string name="Edit">Bearbeiten</string>
    <string name="Save">Speichern</string>
    <string name="lowest_price">minimum</string>
    <string name="highest_price">maximum</string>
    <string name="between">bis</string>
    <string name="restaurant_logo">restaurant_logo</string>
    <string name="location_icon">location_icon</string>
    <string name="bike_icon">bike_icon</string>
    <string name="walk_icon">walk_icon</string>
    <string name="car_icon">car_icon</string>
    <string name="map">map</string>
    <string name="benutzername">Benutzername</string>
</resources>