<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="RestaurantOverviewRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/restaurant_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/restaurant_logo"
            android:src="@drawable/restaurant_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:textColor="@color/green_700"
                android:textSize="@dimen/text_subtitel"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/restaurant_address_streetNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_address_streetNumber" />

                <TextView
                    android:id="@+id/restaurant_address_zipCodeCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_address_zipCodeCity" />

                <TextView
                    android:id="@+id/restaurant_address_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_address_country" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:flexWrap="wrap">
    </com.google.android.material.chip.ChipGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/restaurant_distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/restaurant_distance_label"
                android:textColor="@color/green_700"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/restaurant_distance_icon_layout"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/restaurant_distance_label"
                android:layout_marginEnd="5dp">
                <ImageView
                    android:src="@drawable/location_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/distance_icon"
                    android:contentDescription="@string/location_icon" />
                <ImageView
                    android:src="@drawable/walk_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/walking_distance_icon"
                    android:contentDescription="@string/walk_icon" />
                <ImageView
                    android:src="@drawable/bike_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/biking_distance_icon"
                    android:contentDescription="@string/bike_icon" />
                <ImageView
                    android:src="@drawable/car_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/driving_distance_icon"
                    android:contentDescription="@string/car_icon" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/restaurant_distance_label"
                android:layout_toEndOf="@id/restaurant_distance_icon_layout">
                <TextView
                    android:id="@+id/restaurant_distance_value"
                    android:text="@string/restaurant_distance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"/>
                <TextView
                    android:id="@+id/restaurant_walking_distance"
                    android:text="@string/restaurant_walking_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:id="@+id/restaurant_biking_distance"
                    android:text="@string/restaurant_biking_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"/>
                <TextView
                    android:id="@+id/restaurant_driving_distance"
                    android:text="@string/restaurant_driving_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"/>
            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:src="@drawable/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView4"
            android:contentDescription="@string/map" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:id="@+id/restaurant_opening_hours_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/restaurant_opening_hours_label"
            android:textColor="@color/green_700"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/weekday_layout"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_opening_hours_label"
            android:layout_marginEnd="40dp">
            <TextView
                android:text="@string/weekday_mondayToFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mondayToFriday"/>
            <TextView
                android:text="@string/weekday_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saturday"/>
            <TextView
                android:text="@string/weekday_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sunday"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/weekday_layout"
            android:layout_below="@id/restaurant_opening_hours_label">
            <TextView
                android:text="@string/opening_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mondayToFriday_opening_hours"/>

            <TextView
                android:text="@string/opening_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saturday_opening_hours"/>
            <TextView
                android:text="@string/opening_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sunday_opening_hours"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>